2009-06-25  Giulio Eulisse <giulio.eulisse@cern.ch>

	* IgProfAnalyse.h: fixes formatting of negative numbers.

	* IgProfAnalyse.cc: fixes formatting of progress counter if
	  a baseline is specified.

	* IgProfAnalyzer.cc: Fixes regression reported by Pete.
	  The problem was that the logic to determine which counter
	  to pick up by default if no counters are specified has to
	  be moved right after the baseline is read in, otherwise
	  things fails if no explicit `-r PERF_TICKS` is specified.

	* IgProfAnalyzer.cc: remove useless static variable.

	* IgProfAnalyse.cc, IgProfAnalyse.h: massive indentation and
	  formatting fixes to align to whatever is used in
	  igprof / IgHook.

2009-06-23  Giulio Eulisse <giulio.eulisse@cern.ch>

	* IgProfAnalyse.cc: new stacktrace filtering possibilities 
	  added. In particular possible to filter:

	    * counters that have more / less accumulated counts 
	      than what specified by --min-count-value / --max-count-value.
	    * counters that have more / less calls than what specified
	      by --min-calls-vales / --max-call-value.
	    * counters that have more / less average count size value than
	      what specified by --min-average-value / --max-average-value.

2009-06-18  Giulio Eulisse <giulio.eulisse@cern.ch>

	* IgProfAnalyse.cc, IgProfAnalyse.h: general clean up of source,
	  removing a few function local static objects used by some of 
	  the tree filters, in order to simplify multiple filter
	  passes. This is in preparation for the --baseline / --diff-mode 
	  options which require multiple passes over the same call tree
	  information.

	* IgProfAnalyse.cc, IgProfAnalyse.h: introduction of the i
	    
	      --baseline <filename>

	  option which allows to read two profiles and use one as
	  baseline for the other. This can be used as a rudimental
	  leak / performance regression detector. 
	  There is moreover a modifier option

	      --diff-mode
